--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,20 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>NZX Test App</h1>
+<p>Tom Horrobins nzx test app</p>
+<hr />
+<table>
+  <thead>
+    <tr>
+      <th>Party</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @parties.each do |party| %>
+      <tr>
+        <td><%= party.PartyName %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+<hr />
+<div id="example"></div>
