--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,10 @@
   <title>Nzx</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <script src="https://unpkg.com/babel-core@5.8.38/browser.min.js"></script>
+    <script src="/react.js"></script>
+    <script src="/react-dom.js"></script>
+    <script src="/example.js" type="text/babel"></script>
   <%= csrf_meta_tags %>
 </head>
 <body>
