--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,8 @@
  *= require_tree .
  *= require_self
  */
+.partyDisplay {
+    border: 1px solid black;
+    margin-left: 7px;
+    padding-left: 7px;
+}
